--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,15 @@
-
 {
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "src/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js",
+            "dest": "src/index.js",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
                 "Access-Control-Allow-Origin": "https://chat-app-omega-seven-52.vercel.app",
