--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -15,7 +15,8 @@
             "headers": {
                 "Access-Control-Allow-Origin": "https://chat-me-rosy-eta.vercel.app",
                 "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-                "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+                "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
+                "Access-Control-Allow-Credentials": "true"
             }
         }
     ]
